[gd_scene load_steps=30 format=3 uid="uid://ce2onmhtasobw"]

[ext_resource type="Texture2D" uid="uid://bfr5hhr64sgle" path="res://Graphics/UI/Battle/Bars/HealthBarFull.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dqaw7pv1r3sqo" path="res://Graphics/UI/Battle/HPBacking.png" id="4"]
[ext_resource type="AudioStream" uid="uid://bd168fyv7kxcc" path="res://Sounds/LowHealth.wav" id="5"]
[ext_resource type="Texture2D" uid="uid://bhq20bl8dk3hj" path="res://Graphics/UI/Battle/Bars/HealthBarEmpty.png" id="6"]
[ext_resource type="Texture2D" uid="uid://doyj84swa87o" path="res://Graphics/UI/Battle/HPBorderFrames/HPBorderAppear5.png" id="6_ybcc0"]
[ext_resource type="Script" path="res://Objects/UI/Battle/HealthNode.gd" id="7"]
[ext_resource type="FontFile" uid="uid://di6r18h54jbk1" path="res://Fonts/type_writer.ttf" id="7_f2bt5"]
[ext_resource type="Texture2D" path="res://Graphics/UI/Battle/Targeted.tres" id="8"]
[ext_resource type="Texture2D" uid="uid://2840igkiepqr" path="res://Graphics/UI/Battle/Bars/HealthBarMask.png" id="9"]
[ext_resource type="Texture2D" uid="uid://b3kx6osumt1dt" path="res://Graphics/UI/Battle/HPBorderFrames/HPBorderAppear3.png" id="10_j8ryl"]
[ext_resource type="Texture2D" path="res://Graphics/UI/Battle/HPBorder.tres" id="11"]
[ext_resource type="Texture2D" uid="uid://cj22ip68sngw4" path="res://Graphics/UI/Battle/HPBorderFrames/HPBorderAppear2.png" id="11_ljiag"]
[ext_resource type="Texture2D" uid="uid://cr6j6ffhpiphj" path="res://Graphics/UI/Battle/Skip.png" id="12"]
[ext_resource type="Texture2D" uid="uid://cjpfgqu1disyd" path="res://Graphics/UI/Battle/HPBorderFrames/HPBorderAppear1.png" id="12_f8hjc"]
[ext_resource type="FontFile" uid="uid://dmdy4511qk4nu" path="res://Fonts/temp/battle.ttf" id="14_8d6cw"]

[sub_resource type="CompressedTexture2D" id="1"]

[sub_resource type="LabelSettings" id="LabelSettings_r68il"]
font = ExtResource("14_8d6cw")
font_size = 5
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4c7ug"]
resource_local_to_scene = true
font = ExtResource("7_f2bt5")
font_size = 8

[sub_resource type="Animation" id="3"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bar/Damage:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bar/Damage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bar/Damage:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(31, 35), Vector2(31, 60)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vcx7f"]
_data = {
"Damage": SubResource("3")
}

[sub_resource type="Animation" id="4"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bar/Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(16, 19), Vector2(14, 17), Vector2(16, 19), Vector2(18, 21), Vector2(16, 19)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7xt5y"]
_data = {
"shake": SubResource("4")
}

[sub_resource type="Animation" id="9"]
resource_name = "Turn"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bar/Border:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bar/Name:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Bar/Border:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.11, 0.18, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("6_ybcc0"), ExtResource("10_j8ryl"), ExtResource("11_ljiag"), ExtResource("12_f8hjc"), ExtResource("11")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iijl1"]
_data = {
"Turn": SubResource("9")
}

[sub_resource type="Animation" id="Animation_m8q2w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("./Bar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(100, -50)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2112g"]
resource_name = "collapse"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, -5), Vector2(30, -15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.65098, 0.65098, 0.65098, 1)]
}

[sub_resource type="Animation" id="Animation_eu1h2"]
resource_name = "entry"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("./Bar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.35, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(100, -50), Vector2(-8, 4), Vector2(-10, 5), Vector2(-8, 4), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ijdl7"]
resource_name = "expand"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(30, -15), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.65, 0.65, 0.65, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hjalu"]
_data = {
"RESET": SubResource("Animation_m8q2w"),
"collapse": SubResource("Animation_2112g"),
"entry": SubResource("Animation_eu1h2"),
"expand": SubResource("Animation_ijdl7")
}

[node name="HealthNode" type="Control" groups=["health_node"]]
layout_mode = 3
anchors_preset = 0
script = ExtResource("7")

[node name="Bar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 100.0
offset_top = -50.0
offset_right = 209.0
offset_bottom = -1.0

[node name="Backing" type="TextureRect" parent="Bar"]
layout_mode = 0
offset_left = 1.0
offset_top = -20.0
offset_right = 138.0
offset_bottom = 41.0
texture = ExtResource("4")

[node name="TextureProgress" type="TextureProgressBar" parent="Bar"]
texture_filter = 2
layout_mode = 0
offset_left = 7.0
offset_top = 21.0
offset_right = 67.0
offset_bottom = 43.0
rotation = -0.471239
value = 100.0
texture_under = ExtResource("6")
texture_progress = ExtResource("3")

[node name="Mask" type="TextureRect" parent="Bar"]
layout_mode = 0
offset_left = 49.0
offset_right = 69.0
offset_bottom = 1.0
texture = ExtResource("9")

[node name="Icon" type="TextureRect" parent="Bar"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 0
offset_left = 16.0
offset_top = 19.0
offset_right = 28.0
offset_bottom = 31.0
texture = SubResource("1")

[node name="Skip" type="TextureRect" parent="Bar"]
visible = false
layout_mode = 0
offset_left = 72.0
offset_top = 2.0
offset_right = 88.0
offset_bottom = 8.0
texture = ExtResource("12")

[node name="Border" type="TextureRect" parent="Bar"]
layout_mode = 0
offset_left = -2.0
offset_top = -3.0
offset_right = 109.0
offset_bottom = 46.0
texture = ExtResource("6_ybcc0")

[node name="Name" type="Label" parent="Bar"]
layout_mode = 0
offset_left = 31.0
offset_top = 36.0
offset_right = 61.0
offset_bottom = 55.0
text = "name"
label_settings = SubResource("LabelSettings_r68il")
visible_characters = 0
visible_ratio = 0.0

[node name="Label" type="Label" parent="Bar"]
texture_filter = 6
layout_mode = 0
offset_left = 39.0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 35.0
rotation = -0.471239
scale = Vector2(1.3, 1.3)
text = "100%"
label_settings = SubResource("LabelSettings_4c7ug")

[node name="Targeted" type="TextureRect" parent="Bar"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_top = 9.0
offset_right = 38.0
offset_bottom = 41.0
texture = ExtResource("8")

[node name="Damage" type="Label" parent="Bar"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 31.0
offset_top = 60.0
offset_right = 51.0
offset_bottom = 79.0
text = "-10"

[node name="LowHealth" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vcx7f")
}

[node name="HurtAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7xt5y")
}

[node name="TurnAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iijl1")
}

[node name="Entry" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hjalu")
}

[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="animation_finished" from="Entry" to="." method="_on_entry_animation_finished"]
